--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a href="generic.html">
 										<h2>Mobile</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>UX/UI design for Mobile applications</p>
 										</div>
 									</a>
 								</article>
@@ -76,7 +76,7 @@
 									<a href="generic.html">
 										<h2>Branding</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Branding Designs and Guidelines.</p>
 										</div>
 									</a>
 								</article>
@@ -87,7 +87,7 @@
 									<a href="generic.html">
 										<h2>UI & Web</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>UI Redisgn and Case Studies.</p>
 										</div>
 									</a>
 								</article>
@@ -98,7 +98,7 @@
 									<a href="generic.html">
 										<h2>Print</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Graphic Design for Print</p>
 										</div>
 									</a>
 								</article>
@@ -109,7 +109,7 @@
 									<a href="generic.html">
 										<h2>Product</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Physical Products Designs</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +120,7 @@
 									<a href="generic.html">
 										<h2>3D Graphics</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Illustrations, and Visual Designs</p>
 										</div>
 									</a>
 								</article>
@@ -131,7 +131,7 @@
 									<a href="generic.html">
 										<h2>DISH</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>DISH Network Projects</p>
 										</div>
 									</a>
 								</article>
@@ -142,7 +142,7 @@
 									<a href="generic.html">
 										<h2>Animation</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Animations</p>
 										</div>
 									</a>
 								</article>
@@ -153,7 +153,7 @@
 									<a href="generic.html">
 										<h2>Presentations</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Layout Design</p>
 										</div>
 									</a>
 								</article>
